--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,104 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background: #F2F2F2;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+input, button {
+  outline: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+div.container {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+div.postlist {
+  max-width: 725px;
+  margin: 0 auto;
+}
+
+header {
+  background: #4A90E2;
+  height: 64px;
+  color: #fff;
+}
+
+header nav.menu {
+  line-height: 64px;
+}
+
+header img.logo {
+  width: 121px;
+  height: 24px;
+  margin-top: 20px;
+}
+
+.post{
+  box-shadow: 1px 1px 10px rgba(0,0,0,0.1);
+  background: #fff;
+  margin: 10px 0px;
+  padding: 15px;
+  border-radius: 5px;
+  line-height: 24px;
+  position: relative;
+  padding-left: 65px;
+}
+
+.post .title{
+  display: block;
+  border: 1px sold red;
+  height: 30px;
+  line-height: 17px;
+  margin-bottom: 10px;
+}
+
+.post span {
+  font-size: 16px;
+  font-weight: bold;
+  color: #676767;
+}
+
+.post small {
+  font-size: 11px;
+  display: block;
+  font-weight: normal;
+  color: #d7d7d7;
+}
+
+.post img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: absolute;
+  left: 15px;
+}
+
+.post p{
+  border-bottom: 1px solid #EEEEEE;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  color: #898989;
+}
+
+.comment {
+  margin: 5px 0px;
+}
+
+.comment p {
+  background: #EEEEEE;
+  padding: 15px;
+  border-radius: 10px;
+  color: #616161;
 }
