--- a/src/App.css
+++ b/src/App.css
@@ -33,16 +33,42 @@ header {
   background: #4A90E2;
   height: 64px;
   color: #fff;
+  padding: 0 10px;
 }
 
 header nav.menu {
   line-height: 64px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: auto;
+  width: 100%;
 }
 
 header img.logo {
   width: 121px;
   height: 24px;
-  margin-top: 20px;
+}
+
+a.profile{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+a.profile span {
+  font-size: 15px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+a.profile img {
+  width: 28px;
+  height: 28px;
 }
 
 .post{
@@ -54,6 +80,7 @@ header img.logo {
   line-height: 24px;
   position: relative;
   padding-left: 65px;
+  font-size: 14px;
 }
 
 .post .title{
@@ -65,7 +92,7 @@ header img.logo {
 }
 
 .post span {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   color: #676767;
 }
@@ -101,4 +128,5 @@ header img.logo {
   padding: 15px;
   border-radius: 10px;
   color: #616161;
+  font-size: 13px;
 }
